Fix alignment error in mobile navigation.

--- a/app/assets/stylesheets/desktop/_navigation.sass
+++ b/app/assets/stylesheets/desktop/_navigation.sass
@@ -23,6 +23,7 @@ nav
   li
     font-family: $font-family-nav
     border-bottom: 1px solid #eee
+    text-align: left
     +link-colors($color-nav, $color-nav, $color-nav, $color-nav, $color-nav)
   li:last-child
     border-bottom: 0
